# Model-Finder

./: gradle.properties  settings.gradle.kts
.github/workflows/: build-aar.yml  build.yml
android-beauty-app/: .gitignore  MODELS.md  README.md  gradlew
android-beauty-app/.github/workflows/: build.yml
android-beauty-app/app/: build.gradle.kts
android-beauty-app/app/src/main/java/com/beautyai/prototype/data/inference/: FaceMeshDetector.kt  (+1 more)
android-beauty-app/gradle/: libs.versions.toml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: BeautyMath.cpp  BeautyMath.h  BlemishEngine.cpp  CMakeLists.txt  FeatureProcessor.cpp  SkinProcessor.cpp  native-lib.cpp
app/src/main/java/com/beautyai/prototype/data/inference/: BlazeFaceDetector.kt  FaceLandmarkerDetector.kt  FaceMeshDetector.kt  FaceSegmentationDetector.kt
app/src/main/java/com/beautyai/prototype/data/repository/: FaceAnalysisRepository.kt
app/src/main/java/com/beautyai/prototype/domain/model/: BeautyParameters.kt  FaceData.kt
app/src/main/java/com/beautyai/prototype/domain/usecase/: AnalyseFaceUseCase.kt  ApplyBeautyUseCase.kt  NativeBeautyEngine.kt
app/src/main/java/com/beautyai/prototype/presentation/ui/: MainActivity.kt  MainScreen.kt
app/src/main/java/com/beautyai/prototype/presentation/viewmodel/: BeautyViewModel.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: ic_launcher_background.xml  themes.xml
attached_assets/: textfile_(54)_1783009562335.txt
gradle/: libs.versions.toml
(+9 files in other folders)
